--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,5 +116,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation "com.google.truth:truth:1.1.3"
 }
